Made an actual Readme for the project.